fixed overflow

--- a/src/pages/page.scss
+++ b/src/pages/page.scss
@@ -13,7 +13,6 @@
   display: flex;
   align-items: flex-end;
   overflow: hidden;
-  overflow: scroll;
 }
 
 .page__wrapper {
